Guide: add avatar. fix style width

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>행복한 세상 블로그 :D</title>
+  <title>행복한 코딩 블로그 :D</title>
 
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
