--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/GitHub-Mark-120px-plus.png" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/atom-one-dark.css">
+  <script src="%PUBLIC_URL%/highlight.pack.js"></script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
