--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" />
+		<!-- google search -->
+		<meta name="google-site-verification" content="HZicODInbBKemFyMPNAa0hZFqxXrvctIKQjKNGjc1g8" />
+		
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/images/GitHub-Mark-120px-plus.png" />
 		<link rel="stylesheet" href="%PUBLIC_URL%/styles/atom-one-dark.css" />
 		<script src="%PUBLIC_URL%/highlight.pack.js"></script>
