index.js: set react-snap

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 		<title>행복한 코딩 블로그 :D</title>
 
 		<!-- googld-AdSense -->
-		<script data-ad-client="ca-pub-3156014367299473" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- <script data-ad-client="ca-pub-3156014367299473" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
 		<!-- Start Single Page Apps for GitHub Pages -->
 		<script type="text/javascript">
