--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/images/GitHub-Mark-32px.png" />
+		<link rel="icon" href="%PUBLIC_URL%/images/imcat_64.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" />
 		<!-- google search -->
 		<meta name="google-site-verification" content="HZicODInbBKemFyMPNAa0hZFqxXrvctIKQjKNGjc1g8" />
 
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/images/GitHub-Mark-120px-plus.png" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/images/imcat_120.png" />
 		<link rel="stylesheet" href="%PUBLIC_URL%/styles/atom-one-dark.css" />
 		<script src="%PUBLIC_URL%/highlight.pack.js"></script>
 		<!--
