change Meta image to high resolution image

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="imki123의 행복한 코딩 블로그입니다 :D" />
-		<meta property="image" content="%PUBLIC_URL%/images/imcat_64.png">
-		<meta property="og:image" content="%PUBLIC_URL%/images/imcat_64.png">
+		<meta property="image" content="%PUBLIC_URL%/images/imcat_800x400.png">
+		<meta property="og:image" content="%PUBLIC_URL%/images/imcat_800x400.png">
 		<!-- google search -->
 		<meta name="google-site-verification" content="HZicODInbBKemFyMPNAa0hZFqxXrvctIKQjKNGjc1g8" />
 
