change imcat image

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<!-- google search -->
 		<meta name="google-site-verification" content="HZicODInbBKemFyMPNAa0hZFqxXrvctIKQjKNGjc1g8" />
 
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/images/imcat_120.png" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/images/imcat.png" />
 		<link rel="stylesheet" href="%PUBLIC_URL%/styles/atom-one-dark.css" />
 		<script src="%PUBLIC_URL%/highlight.pack.js"></script>
 		<!--
