--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/images/imcat_64.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="imki123의 행복한 코딩 블로그입니다 :D" />
+		<meta name="description" content="임기의 코딩 블로그입니다 :D" />
 		<meta property="image" content="%PUBLIC_URL%/images/imcat_800x400.png">
 		<meta property="og:image" content="%PUBLIC_URL%/images/imcat_800x400.png">
 		<!-- google search -->
@@ -20,7 +20,7 @@
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-		<title>행복한 코딩 블로그 :D</title>
+		<title>임기의 코딩 블로그 :D</title>
 
 		<!-- googld-AdSense -->
 		<!-- <script data-ad-client="ca-pub-3156014367299473" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
