--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 		<!-- <script data-ad-client="ca-pub-3156014367299473" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
 		<!-- Start Single Page Apps for GitHub Pages -->
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			// Single Page Apps for GitHub Pages
 			// https://github.com/rafrex/spa-github-pages
 			// Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
@@ -53,7 +53,7 @@
 					}
 				}
 			})(window.location)
-		</script>
+		</script> -->
 		<!-- End Single Page Apps for GitHub Pages -->
 	</head>
 
