--- a/public/index.html
+++ b/public/index.html
@@ -13,48 +13,17 @@
 
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/images/imcat.png" />
 		<link rel="stylesheet" href="%PUBLIC_URL%/styles/atom-one-dark.css" />
-		<script src="%PUBLIC_URL%/highlight.pack.js"></script>
+		<script src="%PUBLIC_URL%/lib/highlight.pack.js"></script>
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
 		<title>임기의 코딩 블로그 :D</title>
 
 		<!-- googld-AdSense -->
 		<!-- <script data-ad-client="ca-pub-3156014367299473" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
-		<!-- Start Single Page Apps for GitHub Pages -->
-		<!-- <script type="text/javascript">
-			// Single Page Apps for GitHub Pages
-			// https://github.com/rafrex/spa-github-pages
-			// Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
-			// ----------------------------------------------------------------------
-			// This script checks to see if a redirect is present in the query string
-			// and converts it back into the correct url and adds it to the
-			// browser's history using window.history.replaceState(...),
-			// which won't cause the browser to attempt to load the new url.
-			// When the single page app is loaded further down in this file,
-			// the correct url will be waiting in the browser's history for
-			// the single page app to route accordingly.
-			;(function (l) {
-				if (l.search) {
-					var q = {}
-					l.search
-						.slice(1)
-						.split('&')
-						.forEach(function (v) {
-							var a = v.split('=')
-							q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&')
-						})
-					if (q.p !== undefined) {
-						window.history.replaceState(null, null, l.pathname.slice(0, -1) + (q.p || '') + (q.q ? '?' + q.q : '') + l.hash)
-					}
-				}
-			})(window.location)
-		</script> -->
-		<!-- End Single Page Apps for GitHub Pages -->
 	</head>
 
 	<body>
