--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 						const userinfo = document.querySelector('#userinfo')
 						if (userinfo) userinfo.value = JSON.stringify(user)
 					} else {
-						console.log('callback 처리에 실패하였습니다.')
+						//console.log('callback 처리에 실패하였습니다.')
 					}
 				})
 			})
