Login: add NaverLogin

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<!-- 네이버아이디로로그인 버튼 노출 영역 -->
 		<div id="naverIdLogin"></div>
-		<input id="userinfo" disabled />
+		<input id="userinfo" value=""/>
 
 		<!-- //네이버아이디로로그인 버튼 노출 영역 -->
 
