--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>임기의 코딩 블로그 404</title>
-		<!-- <script type="text/javascript">
+		<script type="text/javascript">
 			// Single Page Apps for GitHub Pages
 			// https://github.com/rafrex/spa-github-pages
 			// Copyright (c) 2016 Rafael Pedicini,  licensed under the MIT License
@@ -40,7 +40,7 @@
 					(l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
 					l.hash,
 			)
-		</script> -->
+		</script>
 	</head>
 	<body></body>
 </html>
