--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
     <script src="%PUBLIC_URL%/lib/naveridlogin_js_sdk_2.0.0.js"></script>
     <!-- 카카오 로그인 스크립트 -->
     <script src="%PUBLIC_URL%/lib/kakao.min.js"></script>
+    <!-- 구글 로그인 스크립트, react-snap때문에 Google API에 localhost:45678 추가해야함 -->
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="605411712139-eb3qqicskmkal2i9u26ppdhoq2jt0bd8.apps.googleusercontent.com">
+    <script src="%PUBLIC_URL%/lib/google.platform.js"></script>
+    <!-- <script src="https://apis.google.com/js/platform.js"></script> -->
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -163,6 +170,35 @@
       }
     </script>
     <!-- // 카카오 로그인 초기화 Script -->
+
+    <!-- 구글 로그인 초기화 Script -->
+    <div id="googleLogin" class="g-signin2 hidden" data-onsuccess="onSignIn" data-theme="dark"></div>
+    <div id="googleLogout" onClick="signOut()"></div>
+    <script>
+      function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        let user = {
+          name: profile.getName(),
+          email: profile.getEmail(),
+          imageUrl: profile.getImageUrl(),
+          host: 'google',
+        }
+        //console.log(user)
+        const userinfo = document.querySelector('#userinfo')
+        if (userinfo) userinfo.value = JSON.stringify(user)
+
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+      }
+      function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+          console.log('User signed out.');
+        });
+      }
+    </script>
+    <!-- // 구글 로그인 초기화 Script -->
 
     <div id="root"></div>
   </body>
