--- a/public/index.html
+++ b/public/index.html
@@ -23,23 +23,22 @@
     <meta name="google-signin-scope" content="profile email" />
     <meta name="google-signin-client_id" content="605411712139-eb3qqicskmkal2i9u26ppdhoq2jt0bd8.apps.googleusercontent.com" />
 
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>임기의 코딩 블로그 😄</title>
-
     <script>
       if (navigator.userAgent !== 'ReactSnap') {
         // some code to dynamically load a script
-        //googld-AdSense
+        // google-AdSense
         let myScript = document.createElement("script");
         myScript.setAttribute("src", "https://www.example.com/foo.js");
         myScript.setAttribute("data-ad-client", "ca-pub-3156014367299473");
         document.body.appendChild(myScript);
       }
     </script>
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>임기의 코딩 블로그 😄</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
