--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       if (navigator.userAgent !== 'ReactSnap') {
         // some code to dynamically load a script
         let myScript = document.createElement("script");
-        myScript.setAttribute("src", "https://www.example.com/foo.js");
+        myScript.setAttribute("src", "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js");
         myScript.setAttribute("data-ad-client", "ca-pub-3156014367299473");
         document.body.appendChild(myScript);
       }
