--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
     <!-- OAuth 유저정보 -->
     <input id="userinfo" class="hidden" value="" />
 
-    <!-- 네이버아디디로로그인 초기화 Script -->
+    <!-- 네이버 아이디로 로그인 초기화 Script -->
     <div id="naverIdLogin" class="hidden"></div>
     <div id="naverIdLogout" class="hidden" onclick="naverIdLogout()"></div>
     <script type="text/javascript">
