Not use ad-sense

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script>
+    <!-- <script>
       // google-AdSense
       if (navigator.userAgent !== 'ReactSnap') {
         // some code to dynamically load a script
@@ -74,7 +74,7 @@
         myScript.setAttribute('data-ad-client', 'ca-pub-3156014367299473')
         document.body.appendChild(myScript)
       }
-    </script>
+    </script> -->
 
     <!-- OAuth 유저정보 -->
     <input id="userinfo" class="hidden" value="" />
