Change theme blue

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/imcat_64.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#364fc7" />
     <meta property="image" content="%PUBLIC_URL%/images/imcat_800x400.png" />
     <meta property="og:image" content="%PUBLIC_URL%/images/imcat_800x400.png" />
     <!-- google search -->
